Revert recent icon changes.
git-svn-id: http://svn.eduke32.com/eduke32@5253 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile
+++ b/polymer/eduke32/Makefile
@@ -339,8 +339,8 @@ ifeq ($(RENDERTYPE),SDL)
         DUKE3D_EDITOR_OBJS+= build_banner
     endif
 
-    DUKE3D_OBJS+= eduke32_icon
-    DUKE3D_EDITOR_OBJS+= eduke32_icon
+    DUKE3D_OBJS+= game_icon
+    DUKE3D_EDITOR_OBJS+= build_icon
 endif
 ifeq ($(MIXERTYPE),SDL)
     MIDI_OBJS=sdlmusic
