Add jaudiolib flac.c, formats.c, and xa.c to Visual Studio solution (they were missing). DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@5269 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/eduke32.vcxproj
+++ b/polymer/eduke32/eduke32.vcxproj
@@ -456,6 +456,9 @@
     <ClCompile Include="source\global.c" />
     <ClCompile Include="source\grpscan.c" />
     <ClCompile Include="source\input.c" />
+    <ClCompile Include="source\jaudiolib\src\flac.c" />
+    <ClCompile Include="source\jaudiolib\src\formats.c" />
+    <ClCompile Include="source\jaudiolib\src\xa.c" />
     <ClCompile Include="source\lunatic\lunatic_game.c" />
     <ClCompile Include="source\lunatic\lunatic_m32.c" />
     <ClCompile Include="source\m32common.c" />
