Build tools/OS X: Fix build by satisfying compat.c's dependence on osxbits.m.
git-svn-id: http://svn.eduke32.com/eduke32@5361 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile
+++ b/polymer/eduke32/Makefile
@@ -169,6 +169,10 @@ GAMEUTILS=ivfrate
 DXUTILS=enumdisplay getdxdidf
 SDLUTILS=makesdlkeytrans
 
+ifeq ($(PLATFORM),DARWIN)
+    UTIL_OBJS += osxbits
+endif
+
 UTIL_OBJS_EXP:=$(addprefix $(ENGINE_OBJ)/,$(addsuffix .$o,$(UTIL_OBJS)))
 
 
