Makefile: Automatically disable ASM when "arm" is found in `uname -m` on Linux.
git-svn-id: http://svn.eduke32.com/eduke32@5372 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -669,6 +669,10 @@ ifeq ($(SUBPLATFORM),LINUX)
         override NOASM=1
     endif
 
+    ifeq ($(findstring arm,$(SYSARCH)),arm)
+        override NOASM=1
+    endif
+
     ifeq ($(findstring x86_64,$(SYSARCH)),x86_64)
         ifeq (1,$(BUILD32_ON_64))
             # On my 64bit Gentoo these are the 32bit emulation libs
