Always compile with "-Wno-missing-braces", as the warnings it hides are useless. "-Wmissing-field-initializers" (part of "-Wextra") should cover us.
git-svn-id: http://svn.eduke32.com/eduke32@5382 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -525,6 +525,7 @@ CWARNS := -W -Wall \
     -Wpointer-arith \
     -Wextra \
     -Wno-char-subscripts \
+    -Wno-missing-braces \
     #-Wstrict-prototypes \
     #-Waggregate-return \
     #-Wwrite-strings \
@@ -532,7 +533,7 @@ CWARNS := -W -Wall \
     #-Waddress -Wlogical-op
 
 ifneq (0,$(CLANG))
-    CWARNS+= -Wno-unused-value -Wno-parentheses -Wno-missing-braces
+    CWARNS+= -Wno-unused-value -Wno-parentheses
 endif
 
 COMMONFLAGS+= -funsigned-char -fno-strict-aliasing $(F_JUMP_TABLES)
