Add colmatch object to MSVC Makefile. DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@5386 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.msvc
+++ b/polymer/eduke32/Makefile.msvc
@@ -64,7 +64,7 @@ MIXERTYPE=WIN
 
 !ifdef DEBUG
 # debugging options
-flags_cl=/Od /Zi
+flags_cl=/Od /Zi # /analyze
 flags_link=/DEBUG
 !else
 # release options
@@ -135,6 +135,7 @@ ENGINE_OBJS= \
 	$(ENGINE_OBJ)\compat.$o \
 	$(ENGINE_OBJ)\crc32.$o \
 	$(ENGINE_OBJ)\defs.$o \
+	$(ENGINE_OBJ)\colmatch.$o \
 	$(ENGINE_OBJ)\engine.$o \
         $(ENGINE_OBJ)\glbuild.$o \
         $(ENGINE_OBJ)\texcache.$o \
