Add colmatch.c to VS project. DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@5390 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/eduke32.vcxproj
+++ b/polymer/eduke32/eduke32.vcxproj
@@ -236,6 +236,7 @@
     <ClCompile Include="build\src\baselayer.c" />
     <ClCompile Include="build\src\build.c" />
     <ClCompile Include="build\src\cache1d.c" />
+    <ClCompile Include="build\src\colmatch.c" />
     <ClCompile Include="build\src\compat.c" />
     <ClCompile Include="build\src\config.c" />
     <ClCompile Include="build\src\crc32.c" />
