Mapster32: changes to aid getting the old color scheme (by customizing).
- bump MAX_TILE_GROUP_ENTRIES to MAXUSERTILES
- in loadtilegroups(), only assign a tile color if it wasn't already
  assigned
- allow "hidden" tile groups by omitting the hotkey
- Tweak the description added to tiles.cfg

git-svn-id: http://svn.eduke32.com/eduke32@5430 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/package/sdk/tiles.cfg
+++ b/polymer/eduke32/package/sdk/tiles.cfg
@@ -3,25 +3,14 @@
 
 #include "names.h"
 
+// NOTE: See the end of the tile group declarations [OLD_COLOR_SCHEME] for how
+// one can create a color scheme similar to earlier Mapster32 builds
+// (non-blocking sprites have an orange tint, blocking ones are purple).
+
 tilegroup "Actors"
 {
 	hotkey "A"
 
-    // NOTE: colors specified here (as well as in the first argument to the DEF
-    // commands '2dcol' and '2dcolidxrange') refer to Mapster32's editorcolor[]
-    // index. They can be viewed with "set showpal 1" assuming that a.m32 has
-    // been loaded.
-    //
-    // The actual color indices will be offset in the range [0 .. 4] when the
-    // mouse hovers near them.
-    //
-    // For example, under the Duke3D palette, one can create a color scheme
-    // similar to earlier Mapster32 builds (non-blocking sprites have an orange
-    // tint, blocking ones are purple) by declaring in a loaded DEF file
-    //  2dcolidxrange 33 33 255
-    // which maps editorcolor[] indices 33 through 255 to the same actual color
-    // indices, and then setting here:
-//    colors 139 231
     colors 31 31
 
 	tiles
@@ -169,6 +158,34 @@ tilegroup "Exploding stuff"
 		FIREVASE 2066 BURNING FIRE BURNING2 FIRE2
 	}
 }
+
+/*
+// Comment out this group to get the [OLD_COLOR_SCHEME].
+tilegroup "All"
+{
+    tilerange 0 30704  // MAXUSERTILES
+
+    // NOTE: no hotkey, this group will not show up in the 'T' menu.
+
+    // NOTE: colors specified here (as well as in the first argument to the DEF
+    // commands '2dcol' and '2dcolidxrange') refer to Mapster32's editorcolor[]
+    // index. They can be viewed with "do set showpal 1" assuming that a.m32
+    // has been loaded.
+    //
+    // The actual color indices will be offset in the range [0 .. 4] when the
+    // mouse hovers near them.
+    //
+    // For example, under the Duke3D palette, one can create a color scheme
+    // similar to earlier Mapster32 builds (non-blocking sprites have an orange
+    // tint, blocking ones are purple) by declaring in a loaded DEF file
+    //  2dcolidxrange 33 33 255
+    // which maps editorcolor[] indices 33 through 255 to the same actual color
+    // indices, and then setting here:
+    colors 139 231
+    // This sets tile colors for all sprites excluding those which have been
+    // assigned a color by the above tile group declarations.
+}
+*/
 
 // Alphabet configuration for text entry tool in 3D mode
 // (press Ctrl-T on a wall-aligned letter)
