In package/sdk/tiles.cfg, use the right word for "remove commenting".
DONT_BUILD.

git-svn-id: http://svn.eduke32.com/eduke32@5431 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/package/sdk/tiles.cfg
+++ b/polymer/eduke32/package/sdk/tiles.cfg
@@ -160,7 +160,7 @@ tilegroup "Exploding stuff"
 }
 
 /*
-// Comment out this group to get the [OLD_COLOR_SCHEME].
+// Uncomment this group to get the [OLD_COLOR_SCHEME].
 tilegroup "All"
 {
     tilerange 0 30704  // MAXUSERTILES
