Add -Wuninitialized, -Wlogical-op, and -Wcast-qual. DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@5543 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -526,11 +526,14 @@ CWARNS := -W -Wall \
     -Wextra \
     -Wno-char-subscripts \
     -Wno-missing-braces \
+    -Wuninitialized \
+    -Wlogical-op \
+    -Wcast-qual \
     #-Wstrict-prototypes \
     #-Waggregate-return \
     #-Wwrite-strings \
-    #-Wcast-qual -Wcast-align \
-    #-Waddress -Wlogical-op
+    #-Wcast-align \
+    #-Waddress 
 
 ifneq (0,$(CLANG))
     CWARNS+= -Wno-unused-value -Wno-parentheses
