--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -526,12 +526,13 @@ CWARNS := -W -Wall \
     -Wextra \
     -Wno-char-subscripts \
     -Wno-missing-braces \
+    -Wno-unknown-warning-option \
     -Wuninitialized \
     -Wlogical-op \
     -Wcast-qual \
+    -Wwrite-strings \
     #-Wstrict-prototypes \
     #-Waggregate-return \
-    #-Wwrite-strings \
     #-Wcast-align \
     #-Waddress 
 
