Xcode: Automatically suggested changes.
git-svn-id: http://svn.eduke32.com/eduke32@5559 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/platform/Apple/bundles/Mapster32.app/Contents/Info.plist
+++ b/polymer/eduke32/platform/Apple/bundles/Mapster32.app/Contents/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleIconFile</key>
 	<string>mapster32.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.voidpoint.mapster32</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
