--- a/polymer/eduke32/platform/Apple/bundles/EDuke32.app/Contents/Info.plist
+++ b/polymer/eduke32/platform/Apple/bundles/EDuke32.app/Contents/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleIconFile</key>
 	<string>eduke32.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.voidpoint.eduke32</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
